# jasmin-slurm-sync

./: .gitignore  README.md  config.example.toml  pyproject.toml  tox.ini
.github/workflows/: tox.yaml
extras/: jasmin-slurm-sync.service
jasmin_slurm_sync/: __main__.py  account.py  cli.py  daemon.py  errors.py  models.py  settings.py  sync.py  user.py  utils.py
jasmin_slurm_sync/models/: account.py  user.py
jasmin_slurm_sync/sync/: __init__.py  account.py  user.py
tests/: base.py  cases.py  test_dummy.py  test_settings.py  test_slurmsync.py
tests/fixtures/: __init__.py  ldap_fixture.json
