[tool.poetry]
name = "jasmin-slurm-sync"
version = "0.1.0"
description = ""
authors = ["Alex Manning <alexander.manning@stfc.ac.uk>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.9"
typeguard = "^4.3.0"
pydantic-settings = "^2.4.0"
typed-argument-parser = "^1.10.1"
sdnotify = "^0.3.2"
jasmin-account-api-client = {git = "https://github.com/cedadev/jasmin-account-api-client.git", rev = "main", subdirectory = "jasmin-account-api-client"}
asyncstdlib = "^3.12.5"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
types-pyyaml = "^6.0.12.20240808"
tox = "^4.18.1"
bandit = "^1.7.9"
black = "^24.8.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
coverage = "^7.6.1"
tblib = "^3.0.0"
mypy = "^1.11.2"
types-pyyaml = "^6.0.12.20240808"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
warn_unreachable = true

plugins = ["pydantic.mypy"]
